--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mongodb": "^3.1.10",
     "nodemon": "^1.18.7",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2"
